internal/docker-run の必須オプションである name を追加

--- a/wercker.yml
+++ b/wercker.yml
@@ -12,6 +12,7 @@ build:
   steps:
     - internal/docker-run:
       image: docker
+      name: get docker's info
       cmd: |
         docker version
         docker ps -a
