--- a/wercker.yml
+++ b/wercker.yml
@@ -18,3 +18,8 @@ build:
         docker ps -a
         docker networks ls
         docker volume ls
+
+    - script:
+      name: stdout
+      code: |
+        echo "hello wercker"
