--- a/wercker.yml
+++ b/wercker.yml
@@ -28,11 +28,7 @@ test:
     - internal/docker-run:
       image: docker
       name: get-dockers-info
-      cmd: |
-        docker version
-        docker ps -a
-        docker networks ls
-        docker volume ls
+      cmd: docker version
 
     - script:
       name: wait
